Добавляет компоненты попап, камера для третьего ДЗ

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="b-header__navigation">
             <nav class="b-nav">
                 <ul class="b-nav__list">
-                    <li class="b-nav__item"><a class="b-nav__link is-active" href="#">Cводка</a></li>
+                    <li class="b-nav__item"><a class="b-nav__link is-active" href="index.html">Главная</a></li>
+                    <li class="b-nav__item"><a class="b-nav__link" href="cameras.html">Камеры</a></li>
+                    <li class="b-nav__item"><a class="b-nav__link" href="#">Cводка</a></li>
                     <li class="b-nav__item"> <a class="b-nav__link" href="#">Устройства</a></li>
                     <li class="b-nav__item"><a class="b-nav__link" href="#">Cценарии</a></li>
                 </ul>
