Добавляет первую реализацию фраемворка

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="b-header__navigation">
             <nav class="b-nav">
                 <ul class="b-nav__list">
-                    <li class="b-nav__item"><a class="b-nav__link is-active" href="index.html">Главная</a></li>
-                    <li class="b-nav__item"><a class="b-nav__link" href="cameras.html">Камеры</a></li>
+                    <li class="b-nav__item"><a class="b-nav__link j-router-link is-active" href="/">Главная</a></li>
+                    <li class="b-nav__item"><a class="b-nav__link j-router-link" href="/cameras">Камеры</a></li>
                     <li class="b-nav__item"><a class="b-nav__link" href="#">Cводка</a></li>
                     <li class="b-nav__item"> <a class="b-nav__link" href="#">Устройства</a></li>
                     <li class="b-nav__item"><a class="b-nav__link" href="#">Cценарии</a></li>
